# HW1-FAST-AQ-Parser

./: HW1_Testing.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
