[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "seqparser"
authors = "Joaquín Magaña"
author_email = "joaquin.magana@ucsf.edu"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	"pytest=7.1.1"
]

[project.urls]
Home = "https://github.com/J-Pesos/HW1-FAST-AQ-Parser"